play with styling for cards, abandon that without success, and work on bug where population generated is too small. Resolve those issues, which were surprisingly complex. Not have to work on bug where population generated is too large

--- a/src/app/lizard-display/lizard-display.component.css
+++ b/src/app/lizard-display/lizard-display.component.css
@@ -2,6 +2,6 @@ li {
   list-style: none;
 }
 
-mat-card{
+/* mat-card{
   width: fit-content;
-}
+} */
