--- a/src/app/population-details-form/population-details-form.component.css
+++ b/src/app/population-details-form/population-details-form.component.css
@@ -17,6 +17,6 @@
   width: 100%;
 } */
 
-.uniform-length-button{
+/* .uniform-length-button{
   width: 150 px;
-}
+} */
