--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 mat-card{
     display: inline-block;
-    width: 30%;
+    width: 20%;
     margin: 20px;
     vertical-align: top;
 }
